# RobotsPlayingChess

./: .gitignore  CMakeLists.txt  Chess1.5.py  ChessAI_alphabeta.py  ChessAI_semirandom.py  ChessBoard.h  ChessBoard.py  ChessPieces.cpp  ChessPieces.h  ChessPieces.py  Player_Base.py  TkBoard.py  Visualization.py  main.cpp  main.py
C++ Files/: CMakeLists.txt  ChessBoard.cpp  ChessPieces.cpp  ChessPieces.h  Setup.cpp  Setup.h  alphabeta.cpp  main.cpp
C++ Files/headers/: Setup.h  alphabeta.h
C++ Files/src/: ChessPieces.cpp  Setup.cpp  alphabeta.cpp
C++Files/: CMakeLists.txt  main.cpp
C++Files/headers/: ChessPieces.h  CppPythonCrossModule.h  Setup.h  alphabeta.h
C++Files/src/: ChessBoard.cpp  ChessPieces.cpp  CppPythonCrossModule.cpp  Setup.cpp  alphabeta.cpp
Misc/: Checkers0.1.py  Chess1.1.py  TicTacToe_with_minimax_implimentation.py
PythonFiles/: ChessAI_alphabeta.py  ChessAI_semirandom.py  ChessBoard.py  ChessPieces.py  Player_Base.py  TkBoard.py  Visualization.py
build_files/: pybindgen_setup.py  setup.py
